fix: corrected UpdateUserById and UpdateUserRole endpoints